--- a/.github/workflows/clang-format.yaml
+++ b/.github/workflows/clang-format.yaml
@@ -2,10 +2,10 @@ name: Clang format
 on:
   push:
     inputs:
-      base: ${{ github.event.before }}
+      base: '${{ github.event.before }}'
   pull_request:
     inputs:
-      base: origin/${{ github.base_ref }}
+      base: 'origin/${{ github.base_ref }}'
 jobs:
   clang-format:
     name: Clang Format
@@ -18,7 +18,7 @@ jobs:
       run: wget https://raw.githubusercontent.com/llvm-mirror/clang/master/tools/clang-format/git-clang-format
     - name: Install git-clang-format
       run: sudo install -t /bin git-clang-format
-    - name: Fetch origin ${{ github.event.inputs.base }}
+    - name: Fetch ${{ github.event.inputs.base }}
       run: git fetch --no-tags --prune --depth=1 origin ${{ github.event.inputs.base }}
     - name: clang-format
       run: git clang-format ${{ github.event.inputs.base }}
