--- a/.github/workflows/clang-format.yaml
+++ b/.github/workflows/clang-format.yaml
@@ -1,9 +1,20 @@
 name: Clang format
 on: [push, pull_request]
 jobs:
+  pre_job:
+    name: Prerequisite checks
+    runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@master
+        with:
+          concurrent_skipping: 'same_content'
   clang-format-pull:
     name: Clang Format
-    if: "github.event_name == 'pull_request'"
+    needs: pre_job
+    if: "github.event_name == 'pull_request'" && ${{ needs.pre_job.outputs.should_skip != 'true' }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -21,7 +32,8 @@ jobs:
       run: git diff --exit-code
   clang-format-push:
     name: Clang Format
-    if: "github.event_name == 'push'"
+    needs: pre_job
+    if: "github.event_name == 'push'" && ${{ needs.pre_job.outputs.should_skip != 'true' }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
