--- a/.github/workflows/dag.yaml
+++ b/.github/workflows/dag.yaml
@@ -13,6 +13,7 @@ jobs:
         uses: fkirc/skip-duplicate-actions@master
         with:
           concurrent_skipping: 'same_content'
+          cancel_others: 'true'
   run-tests-ubuntu:
     name: DAG tests ${{ matrix.os }} ${{ matrix.c_compiler }},${{ matrix.cxx_compiler }}
     needs: pre_job
