--- a/.github/workflows/clang-format.yaml
+++ b/.github/workflows/clang-format.yaml
@@ -15,9 +15,18 @@ jobs:
   clang-format-pull:
     name: Clang Format
     needs: pre_job
-    if: "github.event_name == 'pull_request' && needs.pre_job.outputs.should_skip != 'true'"
+    if: "needs.pre_job.outputs.should_skip != 'true'"
     runs-on: ubuntu-latest
     steps:
+    - name: Define variables
+      run: |
+        echo "BASE=$(\
+          if [[ ${{ github.event_name }} = 'pull_request' ]]; then \
+            echo 'origin/${{ github.base_ref }}'; \
+          else \
+            echo '${{ github.event.before }}'; \
+          fi)" \
+        >> $GITHUB_ENV
     - uses: actions/checkout@v2
     - name: Install clang-format
       run: sudo apt-get install clang-format
@@ -25,29 +34,9 @@ jobs:
       run: wget https://raw.githubusercontent.com/llvm-mirror/clang/master/tools/clang-format/git-clang-format
     - name: Install git-clang-format
       run: sudo install -t /bin git-clang-format
-    - name: Fetch origin/${{ github.base_ref }}
-      run: git fetch --no-tags --prune --depth=1 origin ${{ github.base_ref }}
+    - name: Fetch origin
+      run: git fetch origin
     - name: clang-format
-      run: git clang-format origin/${{ github.base_ref }}
+      run: git clang-format ${{ env.BASE }}
     - name: diff
       run: git diff --exit-code
-  clang-format-push:
-    name: Clang Format
-    needs: pre_job
-    if: "github.event_name == 'push' && needs.pre_job.outputs.should_skip != 'true'"
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Install clang-format
-      run: sudo apt-get install clang-format
-    - name: Download git-clang-format
-      run: wget https://raw.githubusercontent.com/llvm-mirror/clang/master/tools/clang-format/git-clang-format
-    - name: Install git-clang-format
-      run: sudo install -t /bin git-clang-format
-    - name: Fetch origin ${{ github.event.before }}
-      run: git fetch origin ${{ github.event.before }}
-    - name: clang-format
-      run: git clang-format ${{ github.event.before }}
-    - name: diff
-      run: git diff --exit-code
-  
