--- a/configure.in
+++ b/configure.in
@@ -3,11 +3,11 @@
 # Now you only need to update the version number in two places - below,
 # and in the README
 
-AC_INIT([libtrace],[4.0.15],[contact@wand.net.nz],[libtrace])
+AC_INIT([libtrace],[4.0.16],[contact@wand.net.nz],[libtrace])
 
 LIBTRACE_MAJOR=4
 LIBTRACE_MID=0
-LIBTRACE_MINOR=15
+LIBTRACE_MINOR=16
 
 # OpenSolaris hides libraries like libncurses in /usr/gnu/lib, which is not
 # searched by default - add it to LDFLAGS so we at least have a chance of 
@@ -550,7 +550,7 @@ libtrace_pfring=false
 if test "$want_pfring" != no; then
 	# bit annoying that we have to include extra libs to account for
 	# optional pfring modules that depend on these libs
-	AC_SEARCH_LIBS(pfring_recv, pfring, pfring_found=1, pfring_found=0,[-ldag -lpcap])
+	AC_SEARCH_LIBS(pfring_recv, pfring, pfring_found=1, pfring_found=0,[-lpcap])
 	if test "$pfring_found" = 1; then
 		ADD_LIBS="$ADD_LIBS -lpfring"
 		LIBTRACE_LIBS="$LIBTRACE_LIBS -lpfring"
@@ -672,16 +672,20 @@ if test "$want_dpdk" != no; then
 	# So instead simply check for existence
 	if test "$dpdk_found" = 0 -a "$RTE_SDK" != ""; then
 		AC_CHECK_FILE("$RTE_SDK/$RTE_TARGET/lib/libdpdk.so", dpdk_found="dpdk", dpdk_found=0)
+		AC_SUBST(DPDK_STATIC, 0)
 	fi
 	if test "$dpdk_found" = 0 -a "$RTE_SDK" != ""; then
 		AC_CHECK_FILE("$RTE_SDK/$RTE_TARGET/lib/libintel_dpdk.a", dpdk_found=":libintel_dpdk.a", dpdk_found=0)
+		AC_SUBST(DPDK_STATIC, 1)
 	fi
 	# DPDK 2.1.0+ renames this to libdpdk from libintel_dpdk
 	if test "$dpdk_found" = 0 -a "$RTE_SDK" != ""; then
 		AC_CHECK_FILE("$RTE_SDK/$RTE_TARGET/lib/libdpdk.a", dpdk_found=":libdpdk.a", dpdk_found=0)
+		AC_SUBST(DPDK_STATIC, 1)
 	fi
 	if test "$dpdk_found" = 0 -a "$RTE_SDK" != ""; then
 		AC_CHECK_LIB(dpdk, rte_eth_dev_configure, dpdk_found="dpdk", dpdk_found=0)
+		AC_SUBST(DPDK_STATIC, 0)
 	fi
 	if test "$dpdk_found" != 0 -a "$RTE_SDK" != ""; then
 		# Save these now so that they can be re-exported later
@@ -715,6 +719,7 @@ if test "$want_dpdk" != no; then
                         # Used to load the correct DPDK version when not statically linked
                         DPDK_LIBS="-Wl,-z,defs $(echo $DPDK_LIBS | sed -E 's!-L(/[[^ ]]*)!-R\1 -L\1!g')"
                         unset PKG_CONFIG_PATH
+                        AC_SUBST(DPDK_STATIC, 1)
                 fi
         fi
 
@@ -737,20 +742,12 @@ if test "$want_dpdk" != no; then
 	# libtool leaves them be.
 	# Hence the ugly sed hack, TODO find something nicer.
 	#
-	# 3) The package-cfg for Ubuntu 20.02 (DPDK 19.11) is wrong for dynamic
-	# libraries and is missing important libraries like rte_bus_pci,
-	# without which we cannot load PCI devices.
-	# So we always use pkg-config --static here, even for dynamic linking.
-	# Note the nicer PKG_CHECK_MODULES_STATIC macro doesn't exist in older
-	# distributions.
 	#
         if test "$dpdk_found" = 0 -a n"$RTE_SDK" = n""; then
                 PKG_PROG_PKG_CONFIG
-                pkg_config_old="$PKG_CONFIG"
-                PKG_CONFIG="$PKG_CONFIG --static"
                 PKG_CHECK_MODULES([DPDK], [libdpdk >= 18], [pkgconf_dpdk_found="yes"],
                                   [pkgconf_dpdk_found="no"])
-                PKG_CONFIG="$pkg_config_old"
+                AC_SUBST(DPDK_STATIC, 0)
         fi
         # DPDK has been using pkgconf (user-defined or system path)
         if test "$dpdk_found" = 0 -a "x$pkgconf_dpdk_found" = "xyes"; then
@@ -810,6 +807,7 @@ if test "$want_dpdk" != no; then
 
 				dpdk_found=system
 				dpdk_path=system
+				AC_SUBST(DPDK_STATIC, 0)
 			fi
 		fi
 	fi
