Jacob's github actions work (#174)
Adds CI testing using GitHub actions

A pull request runs:
 * Clang-format check on modified lines of code
 * The libtrace test-suite including the live format tests
 * And optionally, DPDK tests if DPDK files are modified

A push runs:
 * Clang-format check on modified lines of code
 * The libtrace test-suite including the live format tests
 * The DPDK tests (always)
 * The DAG tests (which require secrets that can not be run on from a PR)

Other improvements:
 * Adds DAG virtual device support
 * Adds a DAG tests using a vdag device
 * Improvements to the test scripts to return error codes and filter via arguments.

Currently disabled:
* XDP tests, due to a bug with veth interfaces


Co-authored-by: Jacob van Walraven <jacobvw@icloud.com>
Co-authored-by: Jacob Van Walraven <jacob.vanwalraven@waikato.ac.nz>

--- a/configure.in
+++ b/configure.in
@@ -170,6 +170,12 @@ AC_CHECK_HEADER(net/if.h,
  #include <sys/socket.h>
 ])
 
+# Check for linux/ethtool.h
+AC_CHECK_HEADER(linux/ethtool.h,
+	found_ethtool=true,
+	found_ethtool=false,
+)
+
 AC_CHECK_HEADER(netinet/ether.h,
 	AC_DEFINE(HAVE_NETINET_ETHER_H,1,[has netinet/ether.h header]),,[
  #include <sys/types.h>
@@ -544,7 +550,7 @@ libtrace_pfring=false
 if test "$want_pfring" != no; then
 	# bit annoying that we have to include extra libs to account for
 	# optional pfring modules that depend on these libs
-	AC_SEARCH_LIBS(pfring_recv, pfring, pfring_found=1, pfring_found=0,[-ldag -lpcap])
+	AC_SEARCH_LIBS(pfring_recv, pfring, pfring_found=1, pfring_found=0,[-lpcap])
 	if test "$pfring_found" = 1; then
 		ADD_LIBS="$ADD_LIBS -lpfring"
 		LIBTRACE_LIBS="$LIBTRACE_LIBS -lpfring"
@@ -920,6 +926,7 @@ AM_CONDITIONAL([HAVE_LIBBPF], [test "x$libtrace_xdp" = "xtrue"])
 AM_CONDITIONAL([BUILD_EBPF], [test "x$build_ebpf" = "xtrue"])
 
 AM_CONDITIONAL([ENABLE_DTRACE], [test "x$systemtap" = "xtrue"])
+AM_CONDITIONAL([HAVE_LINUX_ETHTOOL_H], [test "x$found_ethtool" = "xtrue"])
 
 # Check for miscellaneous programs
 AC_CHECK_PROG([libtrace_doxygen], [doxygen], [true], [false])
