Rename old pfring API to pfringold Rename pfringzc api to pfring Add macro to zero out statistics structure

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -461,8 +461,8 @@ enum base_format_t {
 	TRACE_FORMAT_TZSPLIVE	  =23,  /** TZSP */
         TRACE_FORMAT_CORSAROTAG   =24,  /** Corsarotagger format */
         TRACE_FORMAT_XDP          =25,  /** AF_XDP format */
-	TRACE_FORMAT_PFRING	  =26,
-	TRACE_FORMAT_PFRINGZC     =27,
+	TRACE_FORMAT_PFRINGOLD	  =26,
+	TRACE_FORMAT_PFRING       =27,
 };
 
 /** RT protocol packet types */
@@ -528,8 +528,8 @@ typedef enum {
         TRACE_RT_DATA_XDP = TRACE_RT_DATA_SIMPLE + TRACE_FORMAT_XDP,
 
 	/** RT is encapsulating a PF_RING capture record */
+	TRACE_RT_DATA_PFRINGOLD = TRACE_RT_DATA_SIMPLE + TRACE_FORMAT_PFRINGOLD,
 	TRACE_RT_DATA_PFRING = TRACE_RT_DATA_SIMPLE + TRACE_FORMAT_PFRING,
-	TRACE_RT_DATA_PFRINGZC = TRACE_RT_DATA_SIMPLE + TRACE_FORMAT_PFRING,
 
 	/** As PCAP does not store the linktype with the packet, we need to 
 	 * create a separate RT type for each supported DLT, starting from
