Only run DAG actions on the base repo
Don't run DAG tests on forks as they won't have access to the secret

--- a/.github/workflows/dag.yaml
+++ b/.github/workflows/dag.yaml
@@ -5,6 +5,7 @@ on:
 jobs:
   pre_job:
     name: Prerequisite checks
+    if: ${{ github.repository_owner == 'LibtraceTeam' }}
     runs-on: ubuntu-latest
     outputs:
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
