actions: disable fast-fail
By default Github actions stop all others if one fails.
Disabling fast-fail lets all finish.
This means we can check if an issue is specific to just one
configuration or all.

--- a/.github/workflows/dag.yaml
+++ b/.github/workflows/dag.yaml
@@ -21,6 +21,7 @@ jobs:
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-20.04, ubuntu-18.04]
         c_compiler: [gcc, clang]
