actions: Use multiple threads when running make
Using -j 3 for Linux because Github allocations 2 cores, and -j 4 for MacOS
which are allocated 3 cores.

--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -63,7 +63,7 @@ jobs:
         cd libtrace/wandio
         ./bootstrap.sh
         ./configure
-        make
+        make -j 3
         sudo make install
         sudo ldconfig
     - name: Build ${{ matrix.dpdk_version }}
