--- a/.github/workflows/dag.yaml
+++ b/.github/workflows/dag.yaml
@@ -51,7 +51,7 @@ jobs:
     - name: Build DAG kernel module
       run: |
         cd dag-packages/kernel-module
-        sudo make KSRC=/lib/modules/$(uname -r)/build
+        sudo make -j 3  KSRC=/lib/modules/$(uname -r)/build
         sudo make install KSRC=/lib/modules/$(uname -r)/build
     - name: Install DAG packages
       run: |
@@ -73,7 +73,7 @@ jobs:
         cd libtrace/wandio
         ./bootstrap.sh
         ./configure
-        make
+        make -j 3
         sudo make install
         sudo ldconfig
     - name: Build/Install Libtrace
@@ -81,10 +81,10 @@ jobs:
         cd libtrace
         ./bootstrap.sh
         ./configure CFLAGS="-I$(pwd)/../libbpf/include/uapi" --with-dag
-        make
+        make -j 3
         sudo make install
     - name: Build Tests
-      run: cd libtrace/test; make
+      run: cd libtrace/test; make -j 3
     - name: Run do-tests.sh
       run: cd libtrace/test; ./do-tests.sh
     - name: Run do-tests-parallel.sh
