--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -724,7 +724,7 @@ typedef struct libtrace_packet_t {
 	int error;                      /**< The error status of pread_packet */
         uint64_t internalid;            /** Internal identifier for the pkt */
         void *srcbucket;                /** Source bucket in trace_rt or stream in XDP */
-
+        void *fmtdata;                  /**< Storage for format-specific data */
         pthread_mutex_t ref_lock;       /**< Lock for reference counter */
         int refcount;                   /**< Reference counter */
         int which_trace_start;          /**< Used to match packet to a started instance of the parent trace */
