--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
 Source: libtrace4
 Priority: optional
 Maintainer: Brad Cowie <brad@wand.net.nz>
-Build-Depends: debhelper (>= 9), dh-autoreconf,
+Build-Depends: debhelper-compat (= 12), dh-autoreconf,
  libpcap-dev, zlib1g-dev, flex, bison, doxygen, liblzma-dev, graphviz,
  libncurses5-dev, libbz2-dev, libssl-dev, libwandio1-dev (>= 4.0.0),
  libwandder2-dev, dpdk-dev, libnuma-dev, libyaml-dev
 Standards-Version: 4.1.3
 Section: libs
-Homepage: http://research.wand.net.nz/software/libtrace.php
+Homepage: https://research.wand.net.nz/software/libtrace.php
 
 Package: libtrace4-dev
 Section: libdevel
@@ -28,7 +28,6 @@ Description: development headers for the libtrace network processing library
  University in New Zealand.
 
 Package: libtrace4
-Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Provides: libtrace4 (= ${binary:Version})
@@ -77,7 +76,6 @@ Description: development headers for the libpacketdump library
  University in New Zealand.
 
 Package: libpacketdump4
-Section: libs
 Architecture: any
 Depends: libtrace4 (= ${binary:Version}), ${misc:Depends}
 Provides: libpacketdump
