Update rpm packaging scripts
 * Remove CentOS 8 support
 * Add Rocky Linux and Alma Linux
 * Replace Fedora 33 with 35

--- a/.github/workflows/rpm-build.yaml
+++ b/.github/workflows/rpm-build.yaml
@@ -17,9 +17,10 @@ jobs:
           - amd64
         target:
           - "centos:7"
-          - "centos:8"
-          - "fedora:33"
+          - "fedora:35"
           - "fedora:34"
+          - "rockylinux:8.5"
+          - "almalinux:8.5"
 
 
     steps:
