--- a/configure.in
+++ b/configure.in
@@ -518,7 +518,23 @@ AC_CHECK_DECL([PACKET_FANOUT],
         [[#include <linux/if_packet.h>]])
 
 # If we use DPDK we might be able to use libnuma
-AC_CHECK_LIB(numa, numa_node_to_cpus, have_numa=1, have_numa=0)
+AC_ARG_WITH(numa,
+	AS_HELP_STRING(--without-numa,disable NUMA support),
+[
+	if test "$withval" = no
+	then
+		want_numa=no
+	else
+		want_numa=yes
+	fi
+],[
+	# Default to building with NUMA
+	want_numa=yes
+])
+
+if test "$want_numa" != no; then
+	AC_CHECK_LIB(numa, numa_node_to_cpus, have_numa=1, have_numa=0)
+fi
 
 # Need libwandder for ETSI live decoding
 AC_CHECK_LIB(wandder, init_wandder_decoder, have_wandder=1, have_wandder=0)
