--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Maintainer: Brad Cowie <brad@wand.net.nz>
 Build-Depends: debhelper-compat (= 12), dh-autoreconf,
  libpcap-dev, zlib1g-dev, flex, bison, doxygen, liblzma-dev, graphviz,
  libncurses5-dev, libbz2-dev, libssl-dev, libwandio1-dev (>= 4.0.0),
- libwandder2-dev, dpdk-dev, libnuma-dev, libyaml-dev
+ libwandder2-dev (>= 2.0.6), dpdk-dev, libnuma-dev, libyaml-dev
 Standards-Version: 4.1.3
 Section: libs
 Homepage: https://research.wand.net.nz/software/libtrace.php
