Resolve various issues with DPDK build test cases (#2)
Fix DPDK test action to work in a post-WAND world

 * Download DPDK sources from a github page rather than
   wand.net.nz/~rsanger
 * Update versions of DPDK to test to match current LTS releases
 * Also add most recent non-LTS release, so we can get a heads up
   on any upcoming breaking behaviours
 * Set /usr/local as DESTDIR for dpdk install during DPDK test action
 * Add debugging output to diagnose failing builds on github actions
 * Reduce DPDK build time in DPDK testing action

Our github actions were being terminated because DPDK 22.07
takes over 20 minutes to build (!), so I've disabled the
building of almost all of the drivers.

Also: force libfl-dev to be installed on the container for
the DPDK test builds to try and resolve problems where
Ubuntu 22.04 builds fail because flex is not being found.

Try to limit net driver building to minimal set by overwriting
the drivers/net/meson.build

--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -34,7 +34,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04, ubuntu-20.04]
-        dpdk_version: [dpdk-21.11, dpdk-20.11, dpdk-20.02, dpdk-19.11.5, dpdk-18.11.10, dpdk-17.11.10, dpdk-16.11.11]
+        dpdk_version: [dpdk-22.07, dpdk-21.11.2, dpdk-20.11.6, dpdk-19.11.13, dpdk-18.11.11, dpdk-17.11.10, dpdk-16.11.11]
         exclude:
           - os: ubuntu-16.04
             dpdk_version: dpdk-20.11
@@ -54,7 +54,7 @@ jobs:
         sudo mount
     - name: Install dependencies
       run: |
-        sudo apt-get -y install build-essential python3-pyelftools flex bison python3-pip python3-setuptools
+        sudo apt-get -y install build-essential python3-pyelftools flex bison python3-pip python3-setuptools libfl-dev
         sudo apt-get -y install libpcap0.8-dev libtool pkgconf wget m4 autoconf automake gcc libnuma-dev
         sudo apt-get -y install meson ninja-build
         sudo pip3 install meson ninja || true
