--- a/configure.in
+++ b/configure.in
@@ -238,7 +238,7 @@ AC_CHECK_HEADER(gdc.h,AC_DEFINE(HAVE_LIBGDC,1,[has gdc.h]))
 # Check for libwandio (no longer bundled with libtrace)
 AC_CHECK_LIB(wandio,wandio_wflush,wandiofound=1,wandiofound=0)
 if test "$wandiofound" = 0; then
-	AC_MSG_ERROR(libwandio 4.0.0 or better is required to compile this version of libtrace. If you have installed libwandio in a non-standard location please use LDFLAGS to specify the location of the library. WANDIO can be obtained from http://research.wand.net.nz/software/libwandio.php)
+	AC_MSG_ERROR(libwandio 4.0.0 or better is required to compile this version of libtrace. If you have installed libwandio in a non-standard location please use LDFLAGS to specify the location of the library. WANDIO can be obtained from https://github.com/LibtraceTeam/wandio)
 else
 	LIBTRACE_LIBS="$LIBTRACE_LIBS -lwandio"
         TOOLS_LIBS="$TOOLS_LIBS -lwandio"
@@ -439,7 +439,7 @@ fi
 # Configure options for use of DAG cards
 # Originally borrowed from libpcap, but extended quite a bit :)
 # More details on how this check works: 
-#	http://wand.net.nz/trac/libtrace/wiki/DAGNotes
+#	https://github.com/LibtraceTeam/libtrace/wiki
 
 AC_ARG_WITH(dag, 
 	    AS_HELP_STRING(--with-dag[=DIR],include DAG live capture support (located in directory DIR, if supplied)),
