testing: fix '==' vs '-eq' error

--- a/.github/workflows/libtrace.yaml
+++ b/.github/workflows/libtrace.yaml
@@ -96,7 +96,7 @@ jobs:
         EOF
         /bin/bash /tmp/ln.sh
         cd xdp-tools
-        if [ "${BUILDOS}" -eq "ubuntu-18.04" ]; then
+        if [ "${BUILDOS}" == "ubuntu-18.04" ]; then
             git checkout v1.2
         fi
         ./configure
