--- a/.github/workflows/libtrace.yaml
+++ b/.github/workflows/libtrace.yaml
@@ -97,7 +97,7 @@ jobs:
         /bin/bash /tmp/ln.sh
         cd xdp-tools
         if [ "${BUILDOS}" == "ubuntu-18.04" ]; then
-            git checkout v1.2
+            git fetch && git checkout v1.2
         fi
         ./configure
         sudo make -j 3 libxdp_install
