Add support for reading and writing binary ETSI LI files
The ETSI LI records are just written direct to disk in their
normal binary encoded format (as per ASN.1).

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -72,7 +72,7 @@ export LDFLAGS += $(SAVED_LDFLAGS)
 endif
 
 if HAVE_WANDDER
-ETSISOURCES=format_etsilive.c
+ETSISOURCES=format_etsilive.c format_etsifile.c format_etsi.h
 else
 ETSISOURCES=
 endif
