Add our own copy of the key definitions from net/bpf.h
This should help resolve issues with net/bpf.h vs
pcap/bpf.h includes on Mac OS

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -15,7 +15,7 @@ AM_CXXFLAGS=@LIBCXXFLAGS@ @CFLAG_VISIBILITY@ -pthread -std=gnu99
 
 extra_DIST = format_template.c
 NATIVEFORMATS=format_linux_common.c format_linux_ring.c format_linux_int.c format_linux_common.h
-BPFFORMATS=format_bpf.c
+BPFFORMATS=format_bpf.c format_bpf.h
 LINUX_SOURCES=
 
 if HAVE_DAG
