--- a/tools/tracemcast/Makefile.am
+++ b/tools/tracemcast/Makefile.am
@@ -1,6 +1,8 @@
-bin_PROGRAMS = tracemcast
-man_MANS = tracemcast.1
+bin_PROGRAMS = tracemcast traceucast
+man_MANS = tracemcast.1 traceucast.1
 EXTRA_DIST = $(man_MANS)
 
 include ../Makefile.tools
 tracemcast_SOURCES = tracemcast.c
+
+traceucast_SOURCEs = traceucast.c
